optimise & fix bag present, sending functional

--- a/WEB_UI/App_LocalResources/IDSRWTResource.resx
+++ b/WEB_UI/App_LocalResources/IDSRWTResource.resx
@@ -708,4 +708,7 @@
   <data name="title_link_present_wagon_marking" xml:space="preserve">
     <value>Разметка предъявление</value>
   </data>
+  <data name="title_condition_present" xml:space="preserve">
+    <value>Разметка вагонника</value>
+  </data>
 </root>
