change message operator amkr

--- a/WEB_UI/App_LocalResources/IDSRWTResource.resx
+++ b/WEB_UI/App_LocalResources/IDSRWTResource.resx
@@ -235,7 +235,7 @@
     <value>Название груза по ГНГ</value>
   </data>
   <data name="title_name_operator" xml:space="preserve">
-    <value>Оператор</value>
+    <value>Оператор (АМКР)</value>
   </data>
   <data name="title_name_owner" xml:space="preserve">
     <value>Собственник</value>
