Форма "АРМ Диспетчера"  + Добавил модули формирования отчета операции «Отправить состав на станции АМКР»  + Реализовал получение отчета операции «Отправить состав на станции АМКР»  + оптимизировал.

--- a/WEB_UI/App_LocalResources/IDSRWTResource.resx
+++ b/WEB_UI/App_LocalResources/IDSRWTResource.resx
@@ -711,4 +711,7 @@
   <data name="title_condition_present" xml:space="preserve">
     <value>Разметка по отправлению</value>
   </data>
+  <data name="title_operation_send" xml:space="preserve">
+    <value>Операции «Отправить состав на станции АМКР»</value>
+  </data>
 </root>
