Окно "АРМ диспетчера"  + Добавил вызов модуля "Операции прибытия"

--- a/WEB_UI/App_LocalResources/IDSRWTResource.resx
+++ b/WEB_UI/App_LocalResources/IDSRWTResource.resx
@@ -714,4 +714,7 @@
   <data name="title_operation_send" xml:space="preserve">
     <value>Операции «Отправить состав на станции АМКР»</value>
   </data>
+  <data name="title_operation_arrival" xml:space="preserve">
+    <value>Операции «Прибытия составов на станции АМКР»</value>
+  </data>
 </root>
