Добавил форму "Справочник Операторов вагонов"

--- a/WEB_UI/App_LocalResources/DirectoryResource.resx
+++ b/WEB_UI/App_LocalResources/DirectoryResource.resx
@@ -372,4 +372,7 @@
   <data name="ways_title" xml:space="preserve">
     <value>Справочник "Путей"</value>
   </data>
+  <data name="operators_wagons_title" xml:space="preserve">
+    <value>Справочник "Операторы"</value>
+  </data>
 </root>
