--- a/WEB_UI/App_LocalResources/IDSRWTResource.resx
+++ b/WEB_UI/App_LocalResources/IDSRWTResource.resx
@@ -717,4 +717,7 @@
   <data name="title_operation_arrival" xml:space="preserve">
     <value>Операции «Прибытия составов на станции АМКР»</value>
   </data>
+  <data name="title_report_operating_balance" xml:space="preserve">
+    <value>Оперативный остаток вагонов на АМКР</value>
+  </data>
 </root>
