--- a/WEB_UI/App_LocalResources/IDSRWTResource.resx
+++ b/WEB_UI/App_LocalResources/IDSRWTResource.resx
@@ -720,4 +720,7 @@
   <data name="title_report_operating_balance" xml:space="preserve">
     <value>Оперативный остаток вагонов на АМКР</value>
   </data>
+  <data name="title_link_com_condition" xml:space="preserve">
+    <value>Разметка ком. сотояния</value>
+  </data>
 </root>
