Исправил ошибки  - Надпись ком состояние  - Вывод кода ошибки при изменении номера ошибки

--- a/WEB_UI/App_LocalResources/IDSRWTResource.resx
+++ b/WEB_UI/App_LocalResources/IDSRWTResource.resx
@@ -721,6 +721,6 @@
     <value>Оперативный остаток вагонов на АМКР</value>
   </data>
   <data name="title_link_com_condition" xml:space="preserve">
-    <value>Разметка ком. сотояния</value>
+    <value>Разметка ком. соcтояния</value>
   </data>
 </root>
