Добавил основную форму "Плата за пользование"  + View  + Controller  + Resource  + js и css

--- a/WEB_UI/App_LocalResources/DirectoryResource.resx
+++ b/WEB_UI/App_LocalResources/DirectoryResource.resx
@@ -387,4 +387,10 @@
   <data name="title_change_num_old" xml:space="preserve">
     <value>Старый номер</value>
   </data>
+  <data name="usage_fee_description" xml:space="preserve">
+    <value>Расчет платы за пользование</value>
+  </data>
+  <data name="usage_fee_title" xml:space="preserve">
+    <value>Плата за пользование</value>
+  </data>
 </root>
