Разработка окна заадресовки

--- a/WEB_UI/App_LocalResources/DirectoryResource.resx
+++ b/WEB_UI/App_LocalResources/DirectoryResource.resx
@@ -393,4 +393,10 @@
   <data name="usage_fee_title" xml:space="preserve">
     <value>Плата за пользование</value>
   </data>
+  <data name="wagon_addressing_description" xml:space="preserve">
+    <value>Заадресовка вагонов на территории АМКР</value>
+  </data>
+  <data name="wagon_addressing_title" xml:space="preserve">
+    <value>Заадресовка вагонов</value>
+  </data>
 </root>
